--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
 # Database Configuration
 DATABASE_URL=postgresql://postgres:your_password@your_supabase_host:5432/postgres?sslmode=require
