feat: implement banner component and prepare for admin management system - Add responsive banner with dynamic taglines - Add pattern background component - Update dashboard layout with banner - Add logo assets (logo_dash.svg to logo_dash4.svg) - Add comprehensive feature documentation - Backup before Phase 1-4 implementation

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
+    "dev:webpack": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "typecheck": "tsc --noEmit",
+    "verify": "npm run lint && npm run typecheck && npm run build",
     "mcp:supabase": "npx -y mcp-remote https://mcp.supabase.com/mcp?project_ref=efxyhgmnrplittfahgzu",
     "mcp:inspect": "npx -y @modelcontextprotocol/inspector --command npx --args \"-y\" --args mcp-remote --args \"https://mcp.supabase.com/mcp?project_ref=efxyhgmnrplittfahgzu\" --open true",
     "db:inspect": "node scripts/db-inspect.mjs",
@@ -48,7 +51,7 @@
     "framer-motion": "^12.24.0",
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.562.0",
-    "next": "16.1.0",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
